# swagger/api.yaml
@@ -47,6 +47,31 @@ paths:
           404:
             description: Not Found
 
+      post:
+        summary: Create new Info
+        parameters:
+          - $ref: '#/parameters/SalesChannelId'
+          - $ref: '#/parameters/FlowId'
+          - $ref: '#/parameters/InfoId'
+          - name: body
+            in: body
+            required: true
+            schema:
+              $ref: '#/definitions/Info'
+        tags: Info API
+        produces:
+          - application/json
+          - application/problem+json
+        responses:
+          201:
+            description: Created
+          400:
+            description: Bad Request
+          401:
+            description: Unauthorized
+          403:
+            description: Forbidden
+
   /sales-channels/{sales_channel_id}/infos/{info_id}:
     put:
       summary: Update an existing rule
